# rust_ci

./: Cargo.toml  Dockerfile
.github/workflows/: release.yml  rust.yml
cfg/: dev.json
src/: main.rs
