[package]
name = "rust_ci"
version = "0.1.0"
authors = ["Sebastian YEPES <syepes@gmail.com>"]
repository = "https://github.com/syepes/rust_ci/"
keywords = ["git", "ci"]
license = "Apache-2.0"
edition = "2018"
include = ["src/*.rs", "*.md", "LICENSE", "README"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1